# target-freshbooks

./: LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
target_freshbooks/: __init__.py  auth.py  client.py  sinks.py  target.py
tests/: __init__.py  test_core.py
