[tool.poetry]
name = "target-freshbooks"
version = "0.0.1"
description = "`target-freshbooks` is a Singer target for Freshbooks, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Jong Lee <jong@hotglue.io>"]
keywords = [
    "ELT",
    "Freshbooks",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
fs-s3fs = { version = "^1.1.1", optional = true }
target-hotglue = "^0.0.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_freshbooks"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_freshbooks"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-freshbooks = 'target_freshbooks.target:TargetFreshbooks.cli'
